2003-10-06  H.J. Lu  <hongjiu.lu@intel.com>

	* elf-eh-frame.c (_bfd_elf_write_section_eh_frame): Pad the
	last CIE/FDE if needed.

2003-10-06  Matt Thomas <matt@3am-software.com>

         config.bfd: Move the hppa*-*-netbsd* case to the hppa*-*-linux* case.

2003-10-06  Robert Millan  <robertmh@gnu.org>

	* configure.in: Match GNU/KNetBSD with new knetbsd*-gnu triplet.
	* config.bfd: Likewise.
	* configure: Regenerate.

2003-10-04  Christian Groessler  <chris@groessler.org>

	* coff-z8k.c (extra_case): Fix displacement length check for R_JR
	and R_CALLR.

2003-10-04  Stephane Carrez  <stcarrez@nerim.fr>

	* elf32-m68hc1x.c: Update to ISO C90; replace PTR with void*.
	* elf32-m68hc11.c: Likewise.
	* elf32-m68hc12.c: Likewise.
	* elf32-m68hc1x.h: Likewise.

2003-10-04  Stephane Carrez  <stcarrez@nerim.fr>

	* elf32-m68hc1x.c (_bfd_m68hc11_elf_merge_private_bfd_data): Fix merge
	of flags between HC12 and HCS12.

2003-10-04  Bryce McKinlay  <bryce@mckinlay.net.nz>

	* merge.c (_bfd_merge_sections): Set SEC_EXCLUDE flag on sections
	which become empty after merging.

2003-09-30  Jakub Jelinek  <jakub@redhat.com>

	* elfxx-ia64.c (ia64_howto_table): Fix size of R_IA64_TPREL64[LM]SB,
	R_IA64_DTPREL{32,64}[LM]SB and R_IA64_DTPMOD64[LM]SB.

2003-09-30  Chris Demetriou  <cgd@broadcom.com>

	* archures.c (bfd_mach_mipsisa64r2): New define.
	* bfd-in2.h: Regenerate.
	* aoutx.h (NAME(aout,machine_type)): Handle bfd_mach_mipsisa64r2.
	* cpu-mips.c (I_mipsisa64r2): New enum value.
	(arch_info_struct): Add entry for I_mipsisa64r2.
	* elfxx-mips.c (_bfd_elf_mips_mach)
	(_bfd_mips_elf_print_private_bfd_data): Handle E_MIPS_ARCH_64R2.
	(mips_set_isa_flags): Add bfd_mach_mipsisa64r2 case.
	(mips_mach_extensions): Add entry for bfd_mach_mipsisa64r2.

2003-09-29  H.J. Lu  <hongjiu.lu@intel.com>

	* elfxx-ia64.c (elfNN_hpux_backend_symbol_processing): New.
	Handle SHN_IA_64_ANSI_COMMON.
	(elf_backend_section_from_bfd_section): Defined.

2003-09-26  H.J. Lu  <hongjiu.lu@intel.com>
